Refactored code and alignment fix.

--- a/Hygieia_UI/UI/src/app/css/dashboardCSS.less
+++ b/Hygieia_UI/UI/src/app/css/dashboardCSS.less
@@ -618,3 +618,7 @@ input.middle:focus {
     right: 2%;
     top: 20%;
 }
+
+.dash-row, .dash-row .fa, tr.dash-row>td{
+    line-height:2.6rem !important;
+}
